<resources>
    <string name="app_name">You See!</string>
    <string name="splash_screen_logo">Splash Screen Logo</string>
    <string name="Search">Search</string>
    <string name="Recents">Recents</string>
    <string name="Settings">SETTINGS</string>
    <string name="Home">HOME</string>
    <string name="Shows">SHOWS</string>
    <string name="Profile">PROFILE</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="thumbnail">Thumbnail</string>
    <string name="DramaName">Drama Name</string>
    <string name="total_episodes">Total Episodes</string>
    <string name="_7_0">7.0</string>
    <string name="drama_country">Drama Country</string>
    <string name="releasing">Releasing</string>
    <string name="view_all">view all</string>
    <string name="top_airing">Top Airing</string>
    <string name="total_results">Results</string>
    <string name="end_of_top_airing">End of top airing</string>
    <string name="end_of_list">--- end of list ---</string>
    <string name="top_shows">Top Shows</string>
    <string name="popular_shows">Popular Shows</string>
    <string name="upcoming_shows">Upcoming Shows</string>
    <string name="movies">MOVIES</string>
    <string name="variety_shows">Variety Shows</string>
    <string name="_1">1</string>
    <string name="info">INFO</string>
    <string name="watch">WATCH</string>
    <string name="rating">Rating</string>
    <string name="aired">Aired</string>
    <string name="aired_on">Aired On</string>
    <string name="ranked">Ranked</string>
    <string name="average_duration">Average Duration</string>
    <string name="popularity">Popularity</string>
    <string name="native_title">Native Title</string>
    <string name="screenwriter">Screenwriter</string>
    <string name="director">Director</string>
    <string name="original_network">Original Network</string>
    <string name="content_rating">Content Rating</string>
    <string name="also_knows_as">Also Knows As</string>
    <string name="n_a">-</string>
    <string name="_0_0">0.0</string>
    <string name="genres">Genres</string>
    <string name="upcoming">Upcoming</string>
    <string name="releasing_today">Releasing today</string>
    <string name="calender">Calender</string>
    <string name="no_result_found">No result found!</string>
    <string name="cast">Cast</string>
    <string name="first_name">First Name</string>
    <string name="family_name">Family Name</string>
    <string name="native_name">Native Name</string>
    <string name="nationality">Nationality</string>
    <string name="gender">Gender</string>
    <string name="born">Born</string>
    <string name="age">Age</string>
    <string name="details">Details</string>
    <string name="worked_on">Worked On</string>
    <string name="unknown">Unknown</string>
    <string name="available_on">Available On</string>
    <string name="brightness">Brightness</string>
    <string name="_100">100</string>
    <string name="video_title">Video title</string>
    <string name="fit">Fit</string>
    <string name="PIP">PIP</string>
    <string name="_1_0x">1.0X</string>
    <string name="qty">Qty</string>
    <string name="paused">Paused</string>
    <string name="centerhelp">centerHelp</string>
    <string name="volume">Volume</string>
    <string name="select_quality">Select Quality</string>
    <string name="off">Off</string>
    <string name="_0_25x">0.25X</string>
    <string name="_0_5x">0.5X</string>
    <string name="_1_5x">1.5X</string>
    <string name="_2_0x">2.0X</string>
    <string name="ok">OK</string>
    <string name="cancel">CANCEL</string>
    <string name="source">Source</string>
    <string name="episode_name">Episode Name</string>
    <string name="episode_release_date">Episode Release Date</string>
    <string name="refuse">Refuse</string>
    <string name="okay">OKAY</string>
    <string name="select_server">Select Server</string>
    <string name="dramacool_consumet">Dramacool(consumet)</string>
    <string name="viewasian_consumet">ViewAsian(consumet)</string>
    <string name="aniwatch_consumet">Aniwatch(consumet)</string>
    <string name="gogo_consumet">Gogo(consumet)</string>
    <string name="top_movies">Top Rated Movies</string>
    <string name="resize">resize</string>
    <string name="back">back</string>
    <string name="front_slash">/</string>
    <string name="_00">00</string>
    <string name="lock">lock</string>
    <string name="wrong_title">Wrong title?</string>
    <string name="always_check_tooltip_text">Always check the selected title name before watching the first Episode, sometimes the title auto selected maybe be wrong.</string>
    <string name="popular_movies">Popular Movies</string>
    <string name="newest_movies">Newest Movies</string>
    <string name="upcoming_movies">Upcoming Movies</string>
    <string name="continue_watching">Continue Watching</string>
    <string name="login_signup">LOGIN / SIGNUP</string>
    <string name="login_to_get_started">Login to get started</string>
    <string name="new_user_your_can_register_from_here_to">New user? You can signup from here</string>
    <string name="enter_email">Enter your email</string>
    <string name="login">Login</string>
    <string name="make_default">Make Default</string>
    <string name="drama">DRAMA</string>
    <string name="trending">Trending</string>
    <string name="show_country">Show Country</string>
    <string name="movie">(Movie)</string>
    <string name="adult_18">Adult (18+)</string>
    <string name="overview">Overview</string>
    <string name="total_seasons">Total Seasons</string>
    <string name="created_by">Created By</string>
    <string name="top_rated_shows">Top Rated Shows</string>
    <string name="on_the_air">On The Air</string>
    <string name="top_rated_movies">Top Rated Movies</string>
    <string name="now_on_cinemas">Now On Cinemas</string>
    <string name="production_company">Production Company</string>
    <string name="episode_no_season_no">Episode No Season No</string>
    <string name="auto_selecting_server">Auto Selecting server</string>
    <string name="new_update_available">New Update Available!</string>
    <string name="changelogs">Changelogs:</string>
    <string name="release_date">Release Date:</string>
    <string name="update">Update</string>
    <string name="not_now">Not Now!</string>
    <string name="imdb_rating">IMDB Rating</string>
    <string name="tmdb_rating">TMDB Rating</string>
    <string name="data_by_tmdb">*data by TMDB</string>
    <string name="data_by_mydramalist_com">*data by mydramalist.com</string>
    <string name="data_by_myanimelist_net">*data by myanimelist.net</string>
    <string name="app_is_under_maintenance">App is under maintenance!</string>
    <string name="anime">ANIME</string>
    <string name="hi_user">Hi user,</string>
    <string name="last_season">Previous Season</string>
    <string name="this_season">This Season</string>
    <string name="upcoming_season">Upcoming Season</string>
    <string name="seasonal_anime_this_season">Seasonal Anime : This Season</string>
    <string name="seasonal_anime_previous_season">Seasonal Anime : Previous Season</string>
    <string name="seasonal_anime_upcoming_season">Seasonal Anime : Upcoming Season</string>
    <string name="top_tv_series">Top Rated TV Series</string>
    <string name="popular_anime">Popular Anime</string>
    <string name="top_upcoming_anime">Top Upcoming Anime</string>
    <string name="_18">18+</string>
    <string name="top_rated_anime_series">Top Rated Anime Series</string>
    <string name="top_rated_anime_movies">Top Rated Anime Movies</string>
    <string name="genres_amp_more"><![CDATA[Genres & more]]></string>
    <string name="explicit_genres">Explicit Genres</string>
    <string name="based_on_theme">Based on Theme</string>
    <string name="based_on_demographics">Based on Demographics</string>
    <string name="seasons">Seasons</string>
    <string name="_1000_results">1000+ Results</string>
    <string name="sunday">Sunday</string>
    <string name="wednesday">Wednesday</string>
    <string name="tuesday">Tuesday</string>
    <string name="monday">Monday</string>
    <string name="thursday">Thursday</string>
    <string name="friday">Friday</string>
    <string name="saturday">Saturday</string>
    <string name="producers">Producers</string>
    <string name="studio">Studio</string>
    <string name="theme">Theme</string>
    <string name="demographic">Demographic</string>
    <string name="getting_airing_info">Getting airing info...</string>
    <string name="synopsis">Synopsis</string>
    <string name="prequel">PREQUEL</string>
    <string name="sequel">SEQUEL</string>
    <string name="relations">Relations</string>
    <string name="anime_name">Anime Name</string>
    <string name="myanimelist_error">MyAnimeList Error! Try refreshing or wait until website is fixed.</string>
    <string name="trailer">Trailer</string>
    <string name="characters">Characters</string>
    <string name="sub">SUB</string>
    <string name="dub">DUB</string>
    <string name="start_watching_to_continue">Start watching to continue (^o^)</string>
</resources>