<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/main_bottomSheet_layout"
    android:background="@drawable/fullround_card"
    android:backgroundTint="@color/card_color">

    <com.airbnb.lottie.LottieAnimationView
        android:id="@+id/custom_animationView"
        android:layout_width="250dp"
        android:layout_height="200dp"
        app:lottie_autoPlay="false"
        app:lottie_loop="true"
        android:visibility="gone"
        android:layout_centerHorizontal="true"
        />


    <TextView
        android:id="@+id/textView_new_update_available"
        android:layout_below="@+id/custom_animationView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="20dp"
        android:layout_marginBottom="10dp"
        android:text="@string/n_a"
        android:textColor="@color/mode"
        android:textSize="20sp"
        android:textStyle="bold"
        android:visibility="visible" />

    <LinearLayout
        android:id="@+id/linear1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/textView_new_update_available"
        android:visibility="gone"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/textView_releaseDate"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="20dp"
            android:layout_marginTop="10dp"
            android:layout_marginEnd="10dp"
            android:layout_marginBottom="10dp"
            android:text="@string/release_date"
            android:textColor="@color/mode"
            android:textSize="15sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/releaseDate_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:layout_marginEnd="20dp"
            android:layout_marginBottom="10dp"
            android:textColor="@color/mode"
            android:textSize="15sp" />

    </LinearLayout>

    <LinearLayout
        android:id="@+id/linear2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/linear1"
        android:visibility="gone"
        android:orientation="vertical">

        <TextView
            android:id="@+id/textView_Changelogs"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="20dp"
            android:layout_marginTop="10dp"
            android:layout_marginEnd="10dp"
            android:text="@string/changelogs"
            android:textColor="@color/mode"
            android:textSize="15sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/Changelogs_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="20dp"
            android:layout_marginTop="5dp"
            android:layout_marginEnd="20dp"
            android:layout_marginBottom="10dp"
            android:textColor="@color/mode"
            android:textSize="15sp" />

    </LinearLayout>

    <LinearLayout
        android:id="@+id/linear3"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/linear2"
        android:visibility="gone"
        android:gravity="end"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/textView_update_btn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="20dp"
            android:layout_marginTop="10dp"
            android:layout_marginEnd="10dp"
            android:padding="8dp"
            android:layout_marginBottom="20dp"
            android:background="@drawable/fullround_card"
            android:backgroundTint="@color/main_color"
            android:text="@string/update"
            android:textColor="@color/mode"
            android:textSize="15sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/textView_notNow_btn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:padding="8dp"
            android:background="@drawable/fullround_card"
            android:backgroundTint="@color/mode_inverse_extra"
            android:layout_marginStart="20dp"
            android:layout_marginTop="10dp"
            android:layout_marginEnd="40dp"
            android:layout_marginBottom="20dp"
            android:text="@string/not_now"
            android:textSize="15sp"
            android:textStyle="bold" />

    </LinearLayout>




</RelativeLayout>